# computer-graphics-NUP

HW1/: CMakeLists.txt  main.cpp
HW2/: CMakeLists.txt  main.cpp
HW3/: CMakeLists.txt  Camera.cpp  Camera.h  OBJ_Loader.h  main.cpp
HW3/solar_system/earth/: earth.mtl
HW3/solar_system/jupiter/: jupiter.mtl
HW3/solar_system/mars/: mars.mtl
HW3/solar_system/mercury/: mercury.mtl
HW3/solar_system/neptune/: neptune.mtl
HW3/solar_system/saturn/: saturn.mtl
HW3/solar_system/sun/: sun.mtl
HW3/solar_system/uranus/: uranus.mtl
HW3/solar_system/venus/: venus.mtl
Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  main.cpp
Midterm/: CMakeLists.txt  main.cpp
